clap_derive/tests/ui/tuple_struct.stderr
error: `#[derive(Clap)]` only supports non-tuple structs and enums
  --> $DIR/tuple_struct.rs:11:10
   |
11 | #[derive(Clap, Debug)]
   |          ^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `parse` found for struct `Opt` in the current scope
  --> $DIR/tuple_struct.rs:16:20
   |
13 | struct Opt(u32);
   | ---------------- function or associated item `parse` not found for this
...
16 |     let opt = Opt::parse();
   |                    ^^^^^ function or associated item not found in `Opt`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `parse`, perhaps you need to implement it:
           candidate #1: `clap::derive::Clap`
